# mowgli_db

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  README.md  heavy_trie.h  main.cpp  seed.py
bench/: bench.cpp  bench_fs.cpp  ycsb.cpp  ycsb_common.h  ycsb_pg.cpp
catalog/: table.cpp  table.h
include/Algorithms/Compression/BaseComponents/: BaseEncoder.h
include/Algorithms/Compression/DeflateLZW/: DeflateLZWEncoder.h
include/Algorithms/Compression/Huffman/: HuffmanEncoder.h  HuffmanNode.h
include/Algorithms/Compression/LZW/: LZWDictionary.h  LZWEncoder.h
include/Config/: Config.h  InfoLoader.h
include/DiskManager/: DiskReader.h  DiskWriter.h  FileHelper.h
include/HeavyTrie/: Chain.h  HeavyTrie.h
include/MQL/Vocabulary/DataTypes/: DataType.h  MQLList.h  MQLString.h
include/MQL/Vocabulary/KeyWords/: CREATE.h  KeyWord.h  TABLE.h
include/Trie/: TrieNode.h
index/: chain.cpp  chain.h  disk_trie.cpp  disk_trie.h  node.h
mql/: engine.cpp  engine.h  lexer.cpp  lexer.h
server/: client.cpp  cluster.cpp  cluster.h  repl.cpp  repl.h  server.cpp  wire.h
storage/: buffer_pool.cpp  buffer_pool.h  disk_manager.cpp  disk_manager.h  heap.cpp  heap.h  wal.cpp  wal.h
test/include/: CMakeLists.txt  DiskManager.cpp
test/include/Algorithms/: CMakeLists.txt
test/include/Algorithms/Compression/: CMakeLists.txt
test/include/Algorithms/Compression/Huffman/: CMakeLists.txt  HuffmanEncoder.cpp  HuffmanNode.cpp
test/include/Algorithms/Compression/LZW/: CMakeLists.txt  LZWDictionary.cpp  LZWEncoder.cpp
test/include/Config/: CMakeLists.txt  InfoLoader.cpp
test/include/DiskManager/: CMakeLists.txt  DiskReader.cpp  DiskWriter.cpp  FileHelper.cpp
test/include/HeavyTrie/: CMakeLists.txt  Chain.cpp  HeavyTrie.cpp
test/include/Trie/: CMakeLists.txt  TrieNode.cpp
tests/: heavy_trie.cpp  test_chain_block.cpp  test_chain_match.cpp  test_compact.cpp  test_disk_manager.cpp  test_disk_trie_insert.cpp  test_disk_trie_lookup.cpp  test_disk_trie_remove.cpp  test_engine.cpp  test_heap.cpp  test_heavy_trie.cpp  test_repl.cpp  test_table.cpp  test_wal.cpp
